# lib/api-spec/openapi.yaml
@@ -224,6 +224,12 @@ components:
           type: string
         status:
           type: string
+        website:
+          type: string
+          nullable: true
+        website_status:
+          type: string
+          nullable: true
       required:
         - id
         - club_name_canonical
